--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Home</title>
-	<link rel="stylesheet" href="/assets/css/fonts.css">
-	<link rel="stylesheet" href="/assets/css/style.css">
-	<link rel="stylesheet" href="/assets/css/media.css">
+<!--	<link rel="stylesheet" href="./assets/css/fonts.css">-->
+	<link rel="stylesheet" href="./assets/css/main.css">
+<!--	<link rel="stylesheet" href="./assets/css/media.css">-->
 </head>
 <body>
 	<div class="main-loader">
