feature: create page "creatives registration"

--- a/app/index.html
+++ b/app/index.html
@@ -3,65 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Home</title>
-<!--	<link rel="stylesheet" href="./assets/css/fonts.css">-->
+	<title>HOI | Home</title>
 	<link rel="stylesheet" href="./assets/css/main.css">
-<!--	<link rel="stylesheet" href="./assets/css/media.css">-->
 </head>
-<body>
+<body data-scroll="140">
 	<div class="main-loader">
 		<div class="line"></div>
 		<div class="load-img"></div>
 	</div>
-	<header>
-		<span class="header_bg">
-			<a href="#" class="logo">
-				<img src="assets/img/logo_black.png" alt="header-logo">
-			</a>
-		</span>
-		<div class="container">
-			<div class="row">
-				<a href="#" class="logo">
-					<img src="assets/img/logo_black.png" alt="header-logo">
-				</a>
-				<div class="auth_button">
-					<a href="#" class="sign_in">Sign in</a>
-					<a href="#" class="join">Join</a>
-				</div>
-
-				<button type="button" class="open_menu_btn">
-					<span></span>
-					<span></span>
-					<span></span>
-				</button>
-			</div>
-			<div class="row">
-				<nav>
-					<ul class="main_menu">
-						<li class="menu_item"><a href="#" class="active">Home</a></li>
-						<li class="menu_item"><a href="#">About</a></li>
-						<li class="menu_item"><a href="#">Collaborate</a></li>
-						<li class="menu_item dropdown">
-							<a class="open_dropdown">Register <i class="arrow_down"></i></a>
-							<ul class="dopdown_menu">
-								<li><a href="#">Influencers</a></li>
-								<li><a href="#">Creatives</a></li>
-								<li><a href="#">Brands & Venues</a></li>
-								<li><a href="#">British Influencer Awards</a></li>
-							</ul>
-						</li>
-						<li class="menu_item"><a href="#">Contact</a></li>
-					</ul>
-					<img src="/assets/img/white-logo.png" alt="logo" class="menu_logo">
-				</nav>
-			</div>
-		</div>
-	</header>
+	<header id="header"></header>
 	<div class="container">
 		<main>
 			<section class="discover_city" style="background-image: url('/assets/img/home/bg.png');">
 				<!-- this background for mobile version -->
-				<div class="background_mobile" style="background-image: url('/assets/img/home/bg.png');">
+				<div class="background_mobile animated" style="background-image: url('/assets/img/home/bg.png');">
 					<img src="/assets/img/white-logo-with-text.png" alt="white-logo">
 					<h1>Discover the city Discover the influential</h1>
 					<h3>Coming soon</h3>
@@ -89,16 +44,20 @@
 
 			<section class="menu_for_london" id="menu_for_london">
 				<h3 class="section-label">The menu for London</h3>
-				<p>Welcome to HOI. Where the glamorous side of our favourite city is revealed and reviewed for our, not so ordinary readers. From divine dining and cocktail collections, to dazzling designers, and eclectic experiences, HOI collaborates with some of the most exciting brands, venues and influencers, to bring to you a curated menu for London. <a href="#">Read more</a></p>
+				<p class="section-description">Welcome to HOI. Where the glamorous side of our favourite city is revealed and reviewed for our, not so ordinary readers. From divine dining and cocktail collections, to dazzling designers, and eclectic experiences, HOI collaborates with some of the most exciting brands, venues and influencers, to bring to you a curated menu for London. <a href="#">Read more</a></p>
 
 				<div class="row flex">
-					<div class="item" style="background-image: url(/assets/img/home/london-menu-1.png); background-position: top;">
-						<span class="border"></span>
-						<h3>Apply to bean Influencer Partner for features and collaborations</h3>
+					<div class="col-6 grid-margin">
+						<div class="item" style="background-image: url(/assets/img/home/london-menu-1.png); background-position: top;">
+							<span class="border"></span>
+							<h3>Apply to bean Influencer Partner for features and collaborations</h3>
+						</div>
 					</div>
-					<div class="item" style="background-image: url(/assets/img/home/london-menu-2.png);">
-						<span class="border"></span>
-						<h3>Join our <br> lux-list of brands and venues</h3>
+					<div class="col-6">
+						<div class="item" style="background-image: url(/assets/img/home/london-menu-2.png);">
+							<span class="border"></span>
+							<h3>Join our <br> lux-list of brands and venues</h3>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -140,14 +99,19 @@
 
 			<section class="tell_us">
 				<div class="row flex">
-					<div class="item" style="background-image: url(/assets/img/home/tell-us-1.png);">
-						<span class="border"></span>
-						<img src="/assets/img/home/bia2020.png" alt="BIA-2020">
+					<div class="col-6">
+						<div class="item" style="background-image: url(/assets/img/home/tell-us-1.png);">
+							<span class="border"></span>
+							<img src="/assets/img/home/bia2020.png" alt="BIA-2020">
+						</div>
 					</div>
-					<div class="item" style="background-image: url(/assets/img/home/tell-us-2.png);">
-						<span class="border"></span>
-						<h3>Favourite <br> influencer? <br> tell us who...</h3>
+					<div class="col-6">
+						<div class="item" style="background-image: url(/assets/img/home/tell-us-2.png);">
+							<span class="border"></span>
+							<h3>Favourite <br> influencer? <br> tell us who...</h3>
+						</div>
 					</div>
+					
 
 					<h4>British Influencer Awards 2020 <a href="#">Registration is now open</a></h4>
 				</div>
@@ -208,7 +172,7 @@
 							</div>
 							<label for="terms">
 								<a href="#">terms and conditions</a> <br>
-								and 
+								and
 								<a href="#"> privacy policy</a>.
 							</label>
 						</div>
@@ -235,7 +199,7 @@
 						<a href="#"><img src="/assets/img/socials/youtube.png" alt="youtube"></a>
 					</div>
 					<p>Secure payments via <a href="#">STRIPE</a></p>
-					<p>Payment types: Visa, MasterCard, Paypal  
+					<p>Payment types: Visa, MasterCard, Paypal
 						<span class="payment_method">
 							<img class="payment" src="/assets/img/socials/visa.png" alt="visa">
 							<img class="payment" src="/assets/img/socials/master-card.png" alt="master-card">
@@ -247,9 +211,9 @@
 					<img src="/assets/img/socials/drinkaware-logo.png" alt="drinkaware-logo">
 					<p>HOI supports the responsible <br> consumption of alcohol</p>
 					<p class="space">
-						<span class="title">Work with us: </span>  
-						<a href="#" class="work-with-us">Blogers</a>  
-						<a href="#" class="work-with-us">Influencer</a> 
+						<span class="title">Work with us: </span>
+						<a href="#" class="work-with-us">Blogers</a>
+						<a href="#" class="work-with-us">Influencer</a>
 						<a href="#" class="work-with-us">Partners</a>
 					</p>
 					<p class="space">Our <a href="#">terms & conditions</a> and <a href="#">privacy policy</a></p>
