feature: create page

--- a/app/index.html
+++ b/app/index.html
@@ -182,47 +182,7 @@
 				</section>
 			</main>
 
-			<footer>
-				<span class="border"></span>
-				<div class="contact_info">
-					<span class="title">HOI Contact Info:</span>
-					<p>
-						20 Conway Road <br>
-						Richmond-Upon-Thames <br>
-						TW4 5LR <br>
-						Tel: 0208 274 1128
-					</p>
-					<div class="socials">
-						<a href="#"><img src="/assets/img/socials/pinterest.png" alt="pinterest"></a>
-						<a href="#"><img src="/assets/img/socials/instagram-white.png" alt="instagram"></a>
-						<a href="#"><img src="/assets/img/socials/facebook.png" alt="facebook"></a>
-						<a href="#"><img src="/assets/img/socials/youtube.png" alt="youtube"></a>
-					</div>
-					<p>Secure payments via <a href="#">STRIPE</a></p>
-					<p>Payment types: Visa, MasterCard, Paypal
-						<span class="payment_method">
-							<img class="payment" src="/assets/img/socials/visa.png" alt="visa">
-							<img class="payment" src="/assets/img/socials/master-card.png" alt="master-card">
-							<img class="payment" src="/assets/img/socials/paypal.png" alt="paypal">
-						</span>
-					</p>
-				</div>
-				<div class="contact_info">
-					<img src="/assets/img/socials/drinkaware-logo.png" alt="drinkaware-logo">
-					<p>HOI supports the responsible <br> consumption of alcohol</p>
-					<p class="space">
-						<span class="title">Work with us: </span>
-						<a href="#" class="work-with-us">Blogers</a>
-						<a href="#" class="work-with-us">Influencer</a>
-						<a href="#" class="work-with-us">Partners</a>
-					</p>
-					<p class="space">Our <a href="#">terms & conditions</a> and <a href="#">privacy policy</a></p>
-					<form action="">
-						<input type="email" name="" placeholder="Email address" required>
-						<button type="submit">Submit</button>
-					</form>
-				</div>
-			</footer>
+			<footer id="footer"></footer>
 		</div>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
