--- a/app/index.html
+++ b/app/index.html
@@ -4,23 +4,47 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>HOI | Home</title>
+	<link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/assets/img/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/assets/img/favicon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+	
 	<link rel="stylesheet" href="./assets/css/main.css">
 </head>
-<body data-scroll="140">
+<body data-scroll="180" class="">
+
+	<!--  Notification item is in /partials/header.html line:44	-->
+
 	<div class="main-loader">
 		<div class="line"></div>
 		<div class="load-img"></div>
 	</div>
+	
 	<header id="header"></header>
+	
 	<div class="container">
 		<main>
 			<section class="discover_city" style="background-image: url('/assets/img/home/bg.png');">
 				<!-- this background for mobile version -->
-				<div class="background_mobile animated" style="background-image: url('/assets/img/home/bg.png');">
-					<img src="/assets/img/white-logo-with-text.png" alt="white-logo">
+				<div class="background_mobile fixed-content" style="background-image: url('/assets/img/home/bg.png');">
+					<img src="/assets/img/white-logo-with-text.png" alt="white-logo" data-initialw="249" data-expectedw="119" class="animated-img">
 					<h1>Discover the city Discover the influential</h1>
 					<h3>Coming soon</h3>
 				</div>
+				<span class="white-bg"></span>
 
 				<h2>London's hidden luxuries revealed and reviewed by a new digital generation of influencers</h2>
 
@@ -185,7 +209,8 @@
 			<footer id="footer"></footer>
 		</div>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script type="text/javascript" src="/assets/js/scripts.js"></script>
-	</body>
-	</html>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!--	<script type="text/javascript" src="/assets/js/smoothScroll.js"></script>-->
+	<script type="text/javascript" src="/assets/js/scripts.js"></script>
+</body>
+</html>
